Getting ready for Heroku

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,16 +7,18 @@
 
 {% block main %}
 
-<h1>Homepage : Project 1 and 2</h1>
-<hr />
+<h1 style="color:blue;">Homepage</h1>
+<br>
+You can route the different pages by using the / and stating the page you want to go to.
+<br>profile, profiles, or profile/(User-Id-Number).
+<br>
+<hr style="color:blue;" />
 <p>Click <a href="/profile">'/profile'</a> to add new profile</p>
 <br>
-<p>Click <a href="/profile/1">'/profile/1'</a> to view profile of user '1'.
-<br>You can change the number in the address bar after to view other profiles. (Valid profile  numbers only)</p>
-<br>
-<br>
 <p>Click <a href="/profiles">'/profiles'</a> to view a list of all users.<p>
-<hr />
 <br>
-<p>The '/profile/userid' and '/profiles' routes have also been set up to return JSON only when given a request with header 'Content-type=application/json'.</p>
+<p>Click <a href="/profile/1">'/profile/1'</a> to view profile of user '1'.
+<br>You can change the number in the address bar to view other profiles. (Valid profile  numbers only)</p>
+<hr style="color:blue;" />
+
 {% endblock %}
